--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/carlosandresat/webscraping#readme",
   "dependencies": {
     "axios": "^0.26.0",
-    "cheerio": "^1.0.0-rc.10"
+    "cheerio": "^1.0.0-rc.10",
+    "jest": "^27.5.1"
+  },
+  "jest": {
+    "verbose": true
   }
 }
